--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".SignUpActivity">
 
     <TextView
         android:id="@+id/tvHeader"
@@ -14,46 +14,43 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:layout_marginStart="20dp"
-        android:text="Welcome to ElKecepatan"
+        android:text="Sign Up"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-         />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/tvSignUp"
+        android:id="@+id/tvSignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginStart="20dp"
-        android:text="Belum Punya Akun? Daftar"
+        android:text="Sudah Punya Akun? Masuk"
         android:textColor="@android:color/holo_blue_light"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/tvHeader"
-        app:layout_constraintStart_toStartOf="parent"
-         />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="318dp"
+        android:layout_height="295dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         android:src="@drawable/loginasset"
-        app:layout_constraintTop_toBottomOf="@id/tvSignUp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintDimensionRatio="H,1:1" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvSignIn" />
 
     <EditText
-        android:id="@+id/etEmail"
+        android:id="@+id/etUsername"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Masukkan Email Anda"
-        android:inputType="textEmailAddress"
+        android:hint="Masukkan Username Anda"
+        android:inputType="textPersonName"
         android:padding="16dp"
         android:backgroundTint="@color/black"
         android:textColor="@color/black"
@@ -66,6 +63,23 @@
         android:layout_marginTop="12dp" />
 
     <EditText
+        android:id="@+id/etEmail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Masukkan Email Anda"
+        android:inputType="textEmailAddress"
+        android:padding="16dp"
+        android:backgroundTint="@color/black"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/etUsername"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp" />
+
+    <EditText
         android:id="@+id/etPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -74,7 +88,6 @@
         android:padding="16dp"
         android:backgroundTint="@color/black"
         android:textColor="@color/black"
-        app:startIconDrawable="@drawable/padlock"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/etEmail"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +97,7 @@
         android:layout_marginTop="8dp" />
 
     <Button
-        android:id="@+id/btnlogin"
+        android:id="@+id/btndaftar"
         android:layout_width="351dp"
         android:layout_height="65dp"
         android:layout_marginHorizontal="30dp"
