--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -104,7 +104,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/rounded_button"
-        android:text="Login"
+        android:text="Sign Up"
         android:textSize="20sp"
         android:textColor="@color/white"
         android:gravity="center"
