Upgrading Layout dan Main Menu

--- a/app/src/main/res/layout/activity_main_menu2.xml
+++ b/app/src/main/res/layout/activity_main_menu2.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/background_layers"
     android:padding="16dp">
 
 
@@ -20,38 +20,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+
         />
 
     <!-- BMI Calculator Button -->
     <Button
         android:id="@+id/btn_bmi_calculator"
-        android:layout_width="0dp"
+        android:layout_width="338dp"
         android:layout_height="wrap_content"
         android:text="BMI Calculator"
         app:layout_constraintTop_toBottomOf="@id/tv_menu_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+
+        android:background="@drawable/buttons"
         />
 
     <!-- Disease Prediction Button -->
     <Button
         android:id="@+id/btn_disease_prediction"
-        android:layout_width="0dp"
+        android:layout_width="338dp"
         android:layout_height="wrap_content"
         android:text="Disease Prediction"
         app:layout_constraintTop_toBottomOf="@id/btn_bmi_calculator"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        android:background="@drawable/buttons"
         />
 
     <!-- Life Expectancy Calculator Button -->
     <Button
+
         android:id="@+id/btn_life_expectancy"
-        android:layout_width="0dp"
+        android:layout_width="338dp"
+
         android:layout_height="wrap_content"
         android:text="Life Expectancy Calculator"
+        android:background="@drawable/buttons"
         app:layout_constraintTop_toBottomOf="@id/btn_disease_prediction"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,9 +68,10 @@
     <!-- Mental Disorder Prediction Button -->
     <Button
         android:id="@+id/btn_mental_disorder_prediction"
-        android:layout_width="0dp"
+        android:layout_width="338dp"
         android:layout_height="wrap_content"
         android:text="Mental Disorder Prediction"
+        android:background="@drawable/buttons"
         app:layout_constraintTop_toBottomOf="@id/btn_life_expectancy"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,12 +81,13 @@
     <!-- Logout Button -->
     <Button
         android:id="@+id/btn_logout"
-        android:layout_width="0dp"
+        android:layout_width="338dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/buttons"
         android:text="Log Out"
-        app:layout_constraintTop_toBottomOf="@id/btn_mental_disorder_prediction"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_mental_disorder_prediction" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
